assets/hello-openshift/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: hello-openshift
  name: hello-openshift
  namespace: hello-openshift-namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-openshift
  template:
    metadata:
      labels:
        app: hello-openshift
    spec:
      containers:
      - image: openshift/hello-openshift 
        name: hello-openshift
        ports:
          - containerPort: 8888
            protocol: TCP
          - containerPort: 8080
            protocol: TCP

#---
#apiVersion: v1
#items:
#- apiVersion: apps/v1
#  kind: Deployment
#  metadata:
#    name: hello-openshift-deployment
#    labels:
#      app: hello-openshift
#      app.kubernetes.io/component: hello-openshift
#      app.kubernetes.io/instance: hello-openshift
#  spec:
#    replicas: 1
#    selector:
#      matchLabels:
#        app: hello-openshift
#    template:
#      metadata:
#        labels:
#          app: hello-openshift
#      spec:
#        containers:
#        - image: openshift/hello-openshift@sha256:aaea76ff622d2f8bcb32e538e7b3cd0ef6d291953f3e7c9f556c1ba5baf47e2e
#          imagePullPolicy: IfNotPresent
#          name: hello-openshift
#          ports:
#          - containerPort: 8888
#            protocol: TCP
#          - containerPort: 8080
#            protocol: TCP
#          resources: {}
#          terminationMessagePath: /dev/termination-log
#          terminationMessagePolicy: File
#        dnsPolicy: ClusterFirst
#        restartPolicy: Always
#        schedulerName: default-scheduler
#        securityContext: {}
#        terminationGracePeriodSeconds: 30
#kind: List
