assets/hello-openshift/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: hello-openshift
  name: hello-openshift-svc
  namespace: hello-openshift-namespace
spec:
  ports:
  - name: http1
    port: 8080
    protocol: TCP
    targetPort: 8080
  - name: http2
    port: 8888
    protocol: TCP
    targetPort: 8888
  selector:
    app: hello-openshift
  sessionAffinity: None
  type: ClusterIP
